5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1590_2894.log
== TEST (2019-03-20 15:12:04) 
-- CODE:



# Leitura das entradas e conversao para float:
var = 8
var = float(input("Qual o valor unitario do jogo?: "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45 * 8

# Impressao do valor total:
print("A impressao do valor total eh:", 8)
-- OUTPUT:
A impressao do valor total eh: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:12:25) 
-- CODE:



# Leitura das entradas e conversao para float:
var = y
var = float(input("Qual o valor unitario do jogo?: "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45 * 8

# Impressao do valor total:
print("A impressao do valor total eh:", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = y
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:12:26) 
-- CODE:



# Leitura das entradas e conversao para float:
var = y
var = float(input("Qual o valor unitario do jogo?: "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45 * 8

# Impressao do valor total:
print("A impressao do valor total eh:", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = y
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:12:27) 
-- CODE:



# Leitura das entradas e conversao para float:
var = y
var = float(input("Qual o valor unitario do jogo?: "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45 * 8

# Impressao do valor total:
print("A impressao do valor total eh:", y)
-- EXECUTION TIME:
0.163294
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2894/main.py", line 5, in <module>
    var = y
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:12:27) 
-- CODE:



# Leitura das entradas e conversao para float:
var = y
var = float(input("Qual o valor unitario do jogo?: "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45 * 8

# Impressao do valor total:
print("A impressao do valor total eh:", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = y
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:12:42) 
-- CODE:



# Leitura das entradas e conversao para float:
var = 7
var = float(input("Qual o valor unitario do jogo?: "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45 * 8

# Impressao do valor total:
print("A impressao do valor total eh:", 7)
-- OUTPUT:
A impressao do valor total eh: 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:25:38) 
-- CODE:



# Leitura das entradas e conversao para float:

valor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print("A impressao do valor total eh", valor )
-- OUTPUT:
A impressao do valor total eh 1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:25:45) 
-- CODE:



# Leitura das entradas e conversao para float:

valor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print("A impressao do valor total eh", valor )
-- OUTPUT:
A impressao do valor total eh 1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:25:52) 
-- CODE:



# Leitura das entradas e conversao para float:

valor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print("A impressao do valor total eh", valor )
-- OUTPUT:
A impressao do valor total eh 1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:25:53) 
-- CODE:



# Leitura das entradas e conversao para float:

valor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print("A impressao do valor total eh", valor )
-- EXECUTION TIME:
0.16115
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
A impressao do valor total eh 1.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
A impressao do valor total eh 356.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
A impressao do valor total eh 123987.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:26:11) 
-- CODE:



# Leitura das entradas e conversao para float:

valor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print("A impressao do valor total eh", total )
-- OUTPUT:
A impressao do valor total eh 54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:26:12) 
-- CODE:



# Leitura das entradas e conversao para float:

valor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print("A impressao do valor total eh", total )
-- OUTPUT:
A impressao do valor total eh 54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:26:13) 
-- CODE:



# Leitura das entradas e conversao para float:

valor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print("A impressao do valor total eh", total )
-- OUTPUT:
A impressao do valor total eh 54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:26:14) 
-- CODE:



# Leitura das entradas e conversao para float:

valor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print("A impressao do valor total eh", total )
-- OUTPUT:
A impressao do valor total eh 54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:26:28) 
-- CODE:



# Leitura das entradas e conversao para float:

valor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print( total )
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:26:30) 
-- CODE:



# Leitura das entradas e conversao para float:

valor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print( total )
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:26:58) 
-- CODE:



# Leitura das entradas e conversao para float:

valor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print( total )
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:27:08) 
-- CODE:



# Leitura das entradas e conversao para float:

valor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print( total )
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:27:37) 
-- CODE:



# Leitura das entradas e conversao para float:

valor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print( total )
-- EXECUTION TIME:
0.156694
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
